<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/galleryArrow"
        android:layout_width="288dp"
        android:layout_height="264dp"
        android:layout_marginLeft="210dp"
        android:layout_marginStart="210dp"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/ic_arrow_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/get_image_from_gallery" />

    <ImageView
        android:id="@+id/cameraArrow"
        android:layout_width="254dp"
        android:layout_height="126dp"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="230dp"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/ic_arrow_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/arrow_to_camera_icon" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/camera_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/ocr_hint"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/arrow2ocrbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gallery_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/ocr_hint_gallery"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/galleryArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ps_hint"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ocrImage"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/image_to_ocr" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        android:padding="16dp"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        android:scrollbars = "vertical"/>

    <TextView
        android:id="@+id/pressOcr"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tap_ocr_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/arrow2ocrbtn"
        android:visibility="gone"
        android:layout_width="112dp"
        android:layout_height="104dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:rotation="75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_5"
        android:contentDescription="@string/ocr_arrow" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:visibility="gone"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ocrImage"
        app:layout_constraintTop_toTopOf="@+id/resultTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4971969455307153/3344699473">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>